--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -2,3 +2,19 @@
 @use "./partials/variables" as *;
 
 @import "bootstrap/scss/bootstrap";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
+ul {
+  padding-left: 0;
+}
