--- a/src/assets/style/partials/_mixins.scss
+++ b/src/assets/style/partials/_mixins.scss
@@ -3,3 +3,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@mixin center-between() {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
