--- a/src/assets/style/partials/_mixins.scss
+++ b/src/assets/style/partials/_mixins.scss
@@ -9,3 +9,8 @@
   align-items: center;
   justify-content: space-between;
 }
+@mixin center-evenly() {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
